# gestelt2

./: .gitignore  LICENSE  README.md  new_architecture.txt  simulation.repos  thirdparty.repos
astar_planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
astar_planner/include/astar_planner/: astar.hpp  astar_planner.hpp
astar_planner/src/: astar.cpp  astar_planner.cpp
bringup/: CMakeLists.txt  (+1 more)
controller/pvaj_mpc/: CMakeLists.txt  README.md  package.xml
controller/pvaj_mpc/config/: pvaj_mpc.yaml
controller/pvaj_mpc/include/pvaj_mpc/: pvaj_mpc.hpp
controller/pvaj_mpc/src/: pvaj_mpc.cpp
controller/traj_adaptor_plugins/: CMakeLists.txt  README.md  package.xml  plugins.xml
controller/traj_adaptor_plugins/include/traj_adaptor_plugins/: minco.hpp
controller/traj_adaptor_plugins/src/: minco.cpp
gestelt_bringup/: CMakeLists.txt  README.md  map0_path1_a_star_processed.json  map0_path1_a_star_raw.json  package.xml
gestelt_bringup/config/: default.rviz  fake_drone.yaml  navigator.yaml  px4_config.yaml  px4_pluginlists.yaml  voxel_map.yaml
gestelt_bringup/config/rosbag/: player.yaml
gestelt_bringup/launch/: bringup_launch.py  controller_launch.py  drone_sim_launch.py  fake_drone.py  fake_drone_complete.py  multi_drone_sim_launch.py  multi_fake_drones.py  multi_sitl_drones.py  multi_voronoi_planner.py  navigation_launch.py  offboard.py  offboard_launch.py  px4.py  rosbag_player.py  rviz_launch.py  rviz_viz.py  sitl_drone.py  trajectory_server_test.py  vilota_launch.py  voronoi_planner.py  voronoi_planner_test.py
gestelt_bringup/launch/archive/: fake_drone.py  multi_fake_drones.py  multi_sitl_drones.py  rosbag_player.py  sitl_drone.py
gestelt_bringup/launch/archive/gcs/: execute_land.py  execute_mission_single.py  execute_send_goals.py  gcs.py  gcs_sim.py
gestelt_bringup/launch/archive/offboard/: offboard_uav.py
gestelt_bringup/launch/gcs/: execute_mission.py  execute_mission_single.py  gcs.py  test_planning.py  test_point_goal.py  test_point_goal_sim.py  test_take_off_goal.py  test_take_off_goal_sim.py  test_takeoff.py
gestelt_bringup/launch/mavros_sitl/: mavros_sitl.py
gestelt_bringup/launch/mavros_sitl/include/: mavros_nodes.py  test_param_change.py
gestelt_bringup/launch/offboard/: bringup_launch.py  mavros.py  offboard.py  offboard_launch.py  offboard_uav.py  offboard_uav_0.py  offboard_uav_1.py  offboard_uav_test.py  rviz_viz.py  vilota_launch.py
gestelt_bringup/launch/sim/: bringup_sim_launch.py  multi_drone_sim_launch.py
gestelt_bringup/models/nuswarm/: model.config  model.sdf
gestelt_bringup/params/: gnc_params.yaml  nav2_params.yaml  ros_gz_bridge.yaml
gestelt_bringup/pcd_maps/: empty_15x15.pcd  forest_normal_10x10.pcd  forest_sparse_10x10.pcd  map_test_obs.json  new_map_obs.json  sutd_test_map0.pcd  sutd_test_map1.pcd  vicon_room_no_obs.pcd  vicon_room_obs1.pcd
gestelt_bringup/rviz/: default.rviz  sim.rviz  single_drone.rviz
gestelt_controller/: CMakeLists.txt  README.md  package.xml  plugins.xml
gestelt_controller/include/gestelt_controller/: controller_server.hpp
gestelt_controller/plugins/: pose_progress_checker.cpp  simple_goal_checker.cpp  simple_progress_checker.cpp  stopped_goal_checker.cpp
gestelt_controller/src/: controller_server.cpp  main.cpp
gestelt_core/: CMakeLists.txt  README.md  package.xml
gestelt_core/include/gestelt_core/: controller.hpp  controller_exceptions.hpp  global_planner.hpp  goal_checker.hpp  planner_exceptions.hpp  progress_checker.hpp
gestelt_planner/: CMakeLists.txt  README.md  package.xml
gestelt_planner/include/gestelt_planner/: navigator.hpp  planner_server.hpp
gestelt_planner/src/: main.cpp  navigator.cpp  planner_server.cpp
linear_mpc_controller/: CMakeLists.txt  README.md  linear_mpc_controller.xml  package.xml  setup.cfg  setup.py
linear_mpc_controller/include/linear_mpc_controller/: linear_mpc_controller.hpp  poly_sfc_gen.hpp  pvaj_mpc.hpp
linear_mpc_controller/linear_mpc_controller/: linear_mpc_controller.py
linear_mpc_controller/src/: linear_mpc_controller.cpp
occ_map/: CMakeLists.txt  README.md  package.xml
occ_map/include/occ_map/: cost_values.hpp  occ_map.hpp  visibility_control.h
occ_map/include/voxel_map/: occ_map.hpp
occ_map/src/: occ_map.cpp
perception/fake_sensor/: CMakeLists.txt  README.md  package.xml
perception/fake_sensor/config/: fake_sensor.yaml
perception/fake_sensor/src/: fake_sensor.cpp
perception/voxel_map/: CMakeLists.txt  README.md  package.xml
perception/voxel_map/config/: voxel_map.yaml
perception/voxel_map/src/: voxel_map.cpp
planner/ego_planner/minco_traj_gen/: CMakeLists.txt  README.md
planner/navigator/: CMakeLists.txt  package.xml
planner/navigator/src/: navigator.cpp  navigator_node.cpp
planner/planner_utils/: CMakeLists.txt  README.md  package.xml
planner/planner_utils/src/: planner_utils.cpp
planner/space_time_astar/: CMakeLists.txt  package.xml
planner/space_time_astar/src/: space_time_astar.cpp
planner/voronoi_planner/: CMakeLists.txt  README.md  package.xml
planner/voronoi_planner/src/: voronoi_planner.cpp  voronoi_planner_node.cpp
swarm_tools/fake_drone/: CMakeLists.txt  README.md  package.xml
swarm_tools/fake_drone/src/: fake_drone.cpp  fake_drone_node.cpp
swarm_tools/swarm_collision_checker/: CMakeLists.txt  README.md  package.xml
swarm_tools/swarm_collision_checker/src/: swarm_collision_checker.cpp  swarm_collision_checker_node.cpp
trajectory_server/: CMakeLists.txt  README.md  package.xml
trajectory_server/config/: trajectory_server.yaml
trajectory_server/include/: uavsm.hpp
trajectory_server/include/trajectory_server/: trajectory_server.hpp
trajectory_server/launch/: offboard_control.py
trajectory_server/src/: frame_transforms.cpp  main.cpp  test_trajectory_server.cpp  trajectory_server.cpp  uav_cmd_srv_client.cpp  uavsm.cpp
utils/logger_wrapper/: CMakeLists.txt  README.md  package.xml
utils/logger_wrapper/src/: logger_wrapper.cpp  timer.cpp
utils/viz_helper/: CMakeLists.txt  README.md  package.xml
utils/viz_helper/src/: px4_viz.cpp  viz_helper.cpp
(+888 files in other folders)
