<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gestelt_bringup</name>
  <version>0.0.1</version>
  <description>Bringup files for the Gestelt system</description>
  <maintainer email="john_tanguanzhong@hotmail.com">john</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>voronoi_planner</depend>
  <depend>fake_map</depend>
  <depend>fake_drone</depend>
  <depend>fake_sensor</depend>
  <depend>trajectory_server</depend>
  
  <depend>gestelt_mission</depend>
  <depend>swarm_collision_checker</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
