<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gestelt_bringup</name>
  <version>0.0.1</version>
  <description>Bringup files for the Gestelt system</description>
  <maintainer email="john_tanguanzhong@hotmail.com">john</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>launch_ros</depend>

  <depend>nav2_common</depend>
  <depend>gestelt_planner</depend>
  <depend>gestelt_commander</depend>
  
  <depend>trajectory_server</depend>

  <depend>fake_sensor</depend>
  <depend>fake_map</depend>

  <depend>ros_gz_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
