<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>occ_map</name>
  <version>0.0.0</version>
  <description>Occupancy map</description>
  <maintainer email="john_tanguanzhong@hotmail.com">john</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>

  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <depend>bonxai</depend>
  <depend>ikd_tree</depend>
  <depend>logger_wrapper</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
