<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pvaj_mpc</name>
  <version>0.1.0</version>
  <description>Linear MPC controller</description>

  <maintainer email="johntgz@nus.edu.sg">John Tan</maintainer>
  <author email="johntgz@nus.edu.sg">John Tan</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
